--- a/svelte-frontend/package.json
+++ b/svelte-frontend/package.json
@@ -23,5 +23,8 @@
 		"svelte": "^4.2.7",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-routing": "^2.13.0"
+	}
 }
